--- a/8_CSS_Box_Model_And_Units/Display/app.css
+++ b/8_CSS_Box_Model_And_Units/Display/app.css
@@ -1,11 +1,24 @@
 h1 {
-    background-color: palegoldenrod;
+    background-color: paleturquoise;
     border: 1px solid black;
-    display: inline;
+    width: 300px;
+    padding: 50px;
+    margin: 100px;
 }
 
 span {
-    background-color: pale;
+    background-color: palevioletred;
     border: 1px solid black; 
-    display: block;
+    width: 500px;
+    padding: 50px;
+    margin: 50px;
+}
+
+div {
+    height: 200px;
+    width: 200px;
+    background-color: olivedrab;    
+    border: 5px solid black;
+    display: inline-block;
+    margin: 50px;
 }
