--- a/8_CSS_Box_Model_And_Units/Opacity/app.css
+++ b/8_CSS_Box_Model_And_Units/Opacity/app.css
@@ -7,12 +7,12 @@ section {
 #rgba {
     width: 50%;
     height: 50%;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.7)
 }
 
 #opacity {
     width: 50%;
     height: 50%;
-    background-color: palegoldenrod; 
-    opacity: 0.3; 
+    background-color: yellow;
+    opacity: 0.3;
 }
