Update index.html and app.css in Position folder

--- a/8_CSS_Box_Model_And_Units/Position/app.css
+++ b/8_CSS_Box_Model_And_Units/Position/app.css
@@ -22,7 +22,18 @@ div {
     left: 50px;
 }
 
+#absolute {
+    position: relative;
+}
+
 #absolute #middle {
     position: absolute;
-    top: 50px;
+    top: 1px;
+    left: 1px;
+}
+
+#fixed #middle {
+    position: fixed;
+    top: 0;
+    left: 400px;
 }
