--- a/10_Flexbox_And_Responsive/Flexbox/app.css
+++ b/10_Flexbox_And_Responsive/Flexbox/app.css
@@ -11,16 +11,15 @@ h1, h2{
     margin: 0 auto;
     border: 5px solid #003049;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    align-items: baseline;
-    /* flex-wrap: wrap; */
+    align-items: flex-start;
+    flex-wrap: wrap-reverse;
 }
 
 #container div {
     width: 200px;
     height: 200px;
     text-align:center;
-    font-size: 4em;
 }
 
