--- a/10_Flexbox_And_Responsive/Flexbox/app.css
+++ b/10_Flexbox_And_Responsive/Flexbox/app.css
@@ -13,8 +13,9 @@ h1, h2{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap-reverse;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    /* align-content: center; */
 }
 
 #container div {
@@ -23,3 +24,14 @@ h1, h2{
     text-align:center;
 }
 
+/* div:nth-of-type(2) {
+    align-self: center;
+}
+
+div:nth-of-type(3) {
+    align-self: flex-end;
+} */
+
+div:nth-of-type(5) {
+    align-self: flex-start;
+}
