--- a/10_Flexbox_And_Responsive/Flexbox/app.css
+++ b/10_Flexbox_And_Responsive/Flexbox/app.css
@@ -7,11 +7,11 @@ h1, h2{
 #container {
     background-color: #003049;
     width: 90%;
-    height: 500px;
+    /* height: 500px; */
     margin: 0 auto;
     border: 5px solid #003049;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: flex-end;
     flex-wrap: wrap;
@@ -21,7 +21,15 @@ h1, h2{
 #container div {
     width: 200px;
     height: 200px;
+    max-width: 300px;
     text-align:center;
+    flex-basis: 200px;
+    flex-grow: 1;
+}
+
+div:nth-of-type(1) {
+    flex-grow: 1;
+    flex-basis: 3;
 }
 
 /* div:nth-of-type(2) {
@@ -33,5 +41,24 @@ div:nth-of-type(3) {
 } */
 
 div:nth-of-type(5) {
-    align-self: flex-start;
+    flex-grow: 2;
+    /* flex-shrink: 0; */
+}
+
+main {
+    width: 80%;
+    margin: 0 auto;
+    border: 5px solid black;
+    height: 500px;
+    display: flex;
+}
+
+main .sidebar {
+    background-color: #6930c3;
+    flex: 1 300px;
+}
+
+main .maincontent {
+    background-color: #80ffdb;
+    flex: 2 800px;
 }
